Final -- Renamed main.c -> pipe1.c; renamed output file pipe.txt -> pipe1.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Pipe)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES pipe1.c)
 add_executable(Pipe ${SOURCE_FILES})
